welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:4: error: not found: type red
setCouleurBrosse(c:red);
                   ^